Update character detail textViews

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp"
+    android:background="#E1D7D7"
     android:orientation="vertical"
+    android:padding="8dp"
     tools:context=".fragments.DetailsFragment">
 
 
@@ -15,6 +15,7 @@
         android:layout_height="200dp"
         android:scaleType="fitXY"
         android:src="@drawable/ic_launcher_background" />
+
 
     <TextView
         android:id="@+id/textViewNameDetails"
@@ -96,6 +97,5 @@
         android:text="Is Alive"
         android:textColor="@color/black"
         android:textSize="20sp" />
-
 
 </LinearLayout>
